--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+
+@layer components {
+  * {
+    transition: all 0.25s ease;
+    font-family: 'poppins', sans-serif;
+  }
+  *:focus {
+    outline: none;
+  }
+  .btn {
+    @apply bg-blue-600 px-2 py-1 text-white text-lg rounded-md hover:bg-blue-800
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
+@tailwind utilities;
